rust/tests/ui/price_size_not_interchangeable.stderr
error[E0308]: mismatched types
  --> tests/ui/price_size_not_interchangeable.rs:11:23
   |
11 |     let _size: Size = price;
   |                ----   ^^^^^ expected `Size`, found `Price`
   |                |
   |                expected due to this
